# napari-cta

./: .gitignore  README.md  pyproject.toml
CTA/: __init__.py  backend.py  napari.yaml  widget.py
napari_cta.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
